--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       />
       <button id="btn">Pesquisar</button>
       </div>
-      <p class="cep-pesquisado" id="cep-pesquisado">sfdsfdasgfdsgsdgswdgsdg</p>
+      <p class="cep-pesquisado" id="cep-pesquisado"></p>
     </div>
     <div class="container-endereco">
       <label for="endereco" class="label-info"><span>Endereço: </span> 
